--- a/br_flickr/Base.lproj/Main.storyboard
+++ b/br_flickr/Base.lproj/Main.storyboard
@@ -1,24 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dxm-dK-jh1">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Flickr Photos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="br_flickr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4dd-PV-hdt">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="photo_list_item" rowHeight="220" id="WRC-CX-W4j" customClass="ImageSearchCell" customModule="br_flickr" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="220"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WRC-CX-W4j" id="ZK4-2w-IXs">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DtY-Wu-hNQ">
+                                                    <rect key="frame" x="16" y="16" width="382" height="150"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="150" id="on2-9I-tZH"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K4Z-ey-Gke">
+                                                    <rect key="frame" x="16" y="182" width="382" height="24"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="3HC-Us-9j3">
+                                                    <rect key="frame" x="197" y="81" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="K4Z-ey-Gke" firstAttribute="leading" secondItem="ZK4-2w-IXs" secondAttribute="leading" constant="16" id="1Dl-mr-aWk"/>
+                                                <constraint firstItem="3HC-Us-9j3" firstAttribute="centerY" secondItem="DtY-Wu-hNQ" secondAttribute="centerY" id="BY9-Ay-hsK"/>
+                                                <constraint firstAttribute="trailing" secondItem="DtY-Wu-hNQ" secondAttribute="trailing" constant="16" id="EDh-Mt-CMT"/>
+                                                <constraint firstItem="3HC-Us-9j3" firstAttribute="centerX" secondItem="DtY-Wu-hNQ" secondAttribute="centerX" id="QM9-cD-y0O"/>
+                                                <constraint firstItem="DtY-Wu-hNQ" firstAttribute="leading" secondItem="ZK4-2w-IXs" secondAttribute="leading" constant="16" id="S73-ej-Fr3"/>
+                                                <constraint firstItem="DtY-Wu-hNQ" firstAttribute="top" secondItem="ZK4-2w-IXs" secondAttribute="top" constant="16" id="f86-Hx-0Kx"/>
+                                                <constraint firstItem="K4Z-ey-Gke" firstAttribute="top" secondItem="DtY-Wu-hNQ" secondAttribute="bottom" constant="16" id="fGX-Vr-FSd"/>
+                                                <constraint firstAttribute="trailing" secondItem="K4Z-ey-Gke" secondAttribute="trailing" constant="16" id="ylX-Fv-cQa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="activityIndicator" destination="3HC-Us-9j3" id="MJh-yn-vmk"/>
+                                            <outlet property="contentImageView" destination="DtY-Wu-hNQ" id="1b4-ME-4Zo"/>
+                                            <outlet property="contentTitle" destination="K4Z-ey-Gke" id="KeV-6m-q1d"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="4dd-PV-hdt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1uL-KT-SC1"/>
+                            <constraint firstItem="4dd-PV-hdt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="9Y0-vP-ipj"/>
+                            <constraint firstItem="4dd-PV-hdt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="McL-Wl-9RQ"/>
+                            <constraint firstItem="4dd-PV-hdt" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="cjU-k3-JLx"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Flickr Photos" id="bLb-Uh-rD1"/>
+                    <connections>
+                        <outlet property="mainTableView" destination="4dd-PV-hdt" id="1gb-3d-15Y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="138.61607142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5NH-4y-V1g">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dxm-dK-jh1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ylw-U1-E8K">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="IgL-Cx-X9u"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KhN-lO-Y62" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
 </document>
